Cleaning in pom.xml files. Making Maven 3 happier...
git-svn-id: https://svn.apache.org/repos/asf/directory/studio/trunk@1058701 13f79535-47bb-0310-9956-ffa450edef68